8269064: Dropped messages of AsyncLogWriter cause memleak