src/hotspot/share/logging/logAsyncWriter.cpp
@@ -46,6 +46,10 @@ void AsyncLogWriter::enqueue_locked(const AsyncLogMessage& msg) {
     uint32_t* counter = _stats.add_if_absent(msg.output(), 0, &p_created);
     *counter = *counter + 1;
     // drop the enqueueing message.
+    char* s = msg.message();
+    if (s != nullptr) {
+      os::free(s);
+    }
     return;
   }
 
